fixed scrollbar from not showing up completely in the message list

--- a/theme/chrome/messenger/mailWindow1.css
+++ b/theme/chrome/messenger/mailWindow1.css
@@ -340,7 +340,10 @@ treechildren::-moz-tree-cell-text(subjectCol) {
 }
 
 #threadpane-splitter:not([orient="vertical"]) {
+  /*
   -moz-margin-start: -5px;
+  */
+  -moz-margin-start: 0;
   -moz-margin-end: 0;
 }
 
